Bug 1940278 - Make `HTMLEditor` replace collapsible ASCII white-space with an NBSP if it's visible by a following <br> but it's removed  a=RyanVM

This is a hack until bug 503838 is fixed.

The other browsers puts an NBSP for the last ASCII white-space immediately
before a block boundary to make it visible.  However, we currently need to
keep using an ASCII white-space as-is with putting a padding `<br>` element.

However, web apps may delete the `<br>` for some reasons without maintaining
the preceding collapsible white-space visibility since it's not required in
the other browsers.

Therefore, this patch replaces the white-spaces only when we meet such
situation.  Of course, this breaks the undo stack, but touching the DOM anyway
causes breaking the undo stack.  Thus, we can trust the web app as that it
manages their on undo stack.

Original Revision: https://phabricator.services.mozilla.com/D233472

Differential Revision: https://phabricator.services.mozilla.com/D233620